feat: change API of userWord
